--- a/DOM/three.html
+++ b/DOM/three.html
@@ -6,6 +6,17 @@
     <title>Document</title>
 </head>
 <body style = "background-color:#212121; color: #ffff;">
-    
+
 </body>
+<script>
+    const div = document.createElement('div');
+    console.log(div);
+    div.className = "main";
+    div.id= Math.ceil(Math.random()*100);
+    div.setAttribute("title","this is java script tutorial");
+    div.style.backgroundColor = "green";
+    div.style.color = "orange";
+
+    div.innerText = "i dont know html but i am still learning dom by doing it "
+</script>
 </html>
