--- a/Async_Js/async_color changer.html
+++ b/Async_Js/async_color changer.html
@@ -26,7 +26,7 @@
     }
     
 
-    let stopcall;  //global variable for giving the setTimeOut to the stopper function
+    let stopcall;  //globflooral variable for giving the setTimeOut to the stopper function
      const starter = function(){   // for starting the color changing
 
       if(stopcall == null){  //this condition make sure that the color changing starts only after stopping it 
